--- a/form001.html
+++ b/form001.html
@@ -13,7 +13,7 @@
 </head>
 <body>
    <h1>Meu primeiro formulario</h1> 
-   <form autocomplete="off">
+   <form action="cadastro.php" autocomplete="off">
     <p>Nome : 
         <input type="text" name="nome" id="nome"></p>
     <p>Sobrenome : 
