--- a/form002.html
+++ b/form002.html
@@ -14,6 +14,14 @@
         <label for="iusu">Usuario :</label>
         <input type="text" name="usu" id="iusu">
     </p>
+    <p>
+        <label for="isen">Senha :</label>
+        <input type="password" name="sen" id="isen">
+    </p>
+    <p>
+        <input type="submit" value="Enviar">
+        <input type="reset" value="Limpar">
+    </p>
    </form>
 </body>
 </html>
