--- a/form002.html
+++ b/form002.html
@@ -9,7 +9,7 @@
 <body>
    <h1>Teste de Formulario</h1> 
 
-   <form action="cadastro.php" method="get">
+   <form action="cadastro.php" method="post">
     <p>
         <label for="iusu">Usuario :</label>
         <input type="text" name="usu" id="iusu">
