--- a/form002.html
+++ b/form002.html
@@ -12,11 +12,11 @@
    <form action="cadastro.php" method="post">
     <p>
         <label for="iusu">Usuario :</label>
-        <input type="text" name="usu" id="iusu">
+        <input type="text" name="usu" id="iusu" required>
     </p>
     <p>
         <label for="isen">Senha :</label>
-        <input type="password" name="sen" id="isen">
+        <input type="password" name="sen" id="isen" required>
     </p>
     <p>
         <input type="submit" value="Enviar">
