--- a/form002.html
+++ b/form002.html
@@ -12,11 +12,11 @@
    <form action="cadastro.php" method="post">
     <p>
         <label for="iusu">Usuario :</label>
-        <input type="text" name="usu" id="iusu" required minlength="6" maxlength="12">
+        <input type="text" name="usu" id="iusu" required minlength="6" maxlength="12" size="20">
     </p>
     <p>
         <label for="isen">Senha :</label>
-        <input type="password" name="sen" id="isen" required minlength="4">
+        <input type="password" name="sen" id="isen" required minlength="4" maxlength="10" size="20">
     </p>
     <p>
         <input type="submit" value="Enviar">
