--- a/form002.html
+++ b/form002.html
@@ -16,7 +16,7 @@
     </p>
     <p>
         <label for="isen">Senha :</label>
-        <input type="password" name="sen" id="isen" required minlength="4" maxlength="10" size="20" placeholder="senha">
+        <input type="password" name="sen" id="isen" required minlength="4" maxlength="10" size="20" placeholder="minimo 10 letras">
     </p>
     <p>
         <input type="submit" value="Enviar">
