--- a/form002.html
+++ b/form002.html
@@ -9,7 +9,7 @@
 <body>
    <h1>Teste de Formulario</h1> 
 
-   <form action="cadastro.php" method="post">
+   <form action="cadastro.php" method="post" autocomplete="off">
     <p>
         <label for="iusu">Usuario :</label>
         <input type="text" name="usu" id="iusu" required minlength="6" maxlength="12" size="20" placeholder="nome do usuario">
