--- a/form003.html
+++ b/form003.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <h1>Teste de Formulario</h1>
-    <form action="cadastro.php" method="get">
+    <form action="cadastro.php" method="get" autocomplete="on">
         <p>
             <label for="inome">Nome :</label>
-            <input type="text" name="nome" id="inome" required maxlength="40" placeholder="Nome Completo">
+            <input type="text" name="nome" id="inome" required maxlength="40" placeholder="Nome Completo" autocomplete="name">
         </p>
     </form>
 </body>
