--- a/form003.html
+++ b/form003.html
@@ -13,6 +13,10 @@
             <label for="inome">Nome :</label>
             <input type="text" name="nome" id="inome" required maxlength="40" placeholder="Nome Completo" autocomplete="name">
         </p>
+        <p>
+            <input type="submit" value="Enviar">
+            <input type="reset" value="Limpar">
+        </p>
     </form>
 </body>
 </html>
