--- a/form003.html
+++ b/form003.html
@@ -14,6 +14,10 @@
             <input type="text" name="nome" id="inome" required maxlength="40" placeholder="Nome Completo" autocomplete="name">
         </p>
         <p>
+            <label for="imedia">Media :</label>
+            <input type="number" name="media" id="imedia">
+        </p>
+        <p>
             <input type="submit" value="Enviar">
             <input type="reset" value="Limpar">
         </p>
