--- a/form003.html
+++ b/form003.html
@@ -15,7 +15,7 @@
         </p>
         <p>
             <label for="imedia">Media :</label>
-            <input type="number" name="media" id="imedia">
+            <input type="number" name="media" id="imedia" min="0" max="10">
         </p>
         <p>
             <input type="submit" value="Enviar">
