--- a/form003.html
+++ b/form003.html
@@ -18,6 +18,10 @@
             <input type="number" name="media" id="imedia" min="0" max="10" placeholder="0 a 10" step="0.25" required>
         </p>
         <p>
+            <label for="imes">Periodo Letivo</label>
+            <input type="month" name="mes" id="imes">
+        </p>
+        <p>
             <input type="submit" value="Enviar">
             <input type="reset" value="Limpar">
         </p>
