--- a/form004.html
+++ b/form004.html
@@ -13,6 +13,10 @@
             <label for="iemail">E-mail</label>
             <input type="email" name="email" id="iemail">
         </p>
+        <p>
+            <input type="submit" value="Enviar">
+            <input type="reset" value="Limpar">
+        </p>
     </form>
 </body>
 </html>
