--- a/form004.html
+++ b/form004.html
@@ -11,7 +11,7 @@
     <form action="cadastro.php" method="get">
         <p>
             <label for="iemail">E-mail</label>
-            <input type="email" name="email" id="iemail">
+            <input type="email" name="email" id="iemail" required>
         </p>
         <p>
             <input type="submit" value="Enviar">
