--- a/form004.html
+++ b/form004.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <h1>Exemplo de Formulario</h1>
-    <form action="cadastro.php" method="get">
+    <form action="cadastro.php" method="get" autocomplete="on">
         <p>
             <label for="iemail">E-mail</label>
-            <input type="email" name="email" id="iemail" required>
+            <input type="email" name="email" id="iemail" autocomplete="email" required>
         </p>
         <p>
             <input type="submit" value="Enviar">
