--- a/form004.html
+++ b/form004.html
@@ -14,6 +14,10 @@
             <input type="email" name="email" id="iemail" autocomplete="email" required>
         </p>
         <p>
+            <label for="itel">Telefone</label>
+            <input type="tel" name="tel" id="itel" autocomplete="tel">
+        </p>
+        <p>
             <input type="submit" value="Enviar">
             <input type="reset" value="Limpar">
         </p>
