--- a/form004.html
+++ b/form004.html
@@ -15,7 +15,7 @@
         </p>
         <p>
             <label for="itel">Telefone</label>
-            <input type="tel" name="tel" id="itel" autocomplete="tel">
+            <input type="tel" name="tel" id="itel" autocomplete="tel" required>
         </p>
         <p>
             <input type="submit" value="Enviar">
