--- a/form004.html
+++ b/form004.html
@@ -10,6 +10,10 @@
     <h1>Exemplo de Formulario</h1>
     <form action="cadastro.php" method="get" autocomplete="on">
         <p>
+            <label for="inome">Nome</label>
+            <input type="text" name="nome" id="inome" minlength="7" maxlength="33" required>
+        </p>
+        <p>
             <label for="iemail">E-mail</label>
             <input type="email" name="email" id="iemail" autocomplete="email" required>
         </p>
