--- a/form004.html
+++ b/form004.html
@@ -9,6 +9,8 @@
 <body>
     <h1>Exemplo de Formulario</h1>
     <form action="cadastro.php" method="get" autocomplete="on">
+        <fieldset>
+            <legend>Dados Pessoais</legend>
         <p>
             <label for="inome">Nome</label>
             <input type="text" name="nome" id="inome" minlength="7" maxlength="33" required>
@@ -19,8 +21,9 @@
         </p>
         <p>
             <label for="itel">Telefone</label>
-            <input type="tel" name="tel" id="itel" autocomplete="tel" required>
+            <input type="tel" name="tel" id="itel" autocomplete="tel" required placeholder="(xx)xxxxx-xxxxxx">
         </p>
+        </fieldset>
         <p>
             <input type="submit" value="Enviar">
             <input type="reset" value="Limpar">
