--- a/form005.html
+++ b/form005.html
@@ -12,6 +12,7 @@
   <form action="cadastro.php" method="get" autocomplete="on">
    <fieldset>
     <legend>Idiomas que a pessoa fala</legend>
+    <input type="checkbox" name="ing" id="iing"> Ingles
    </fieldset>
     <p>
         <input type="submit" value="Enviar">
