--- a/form005.html
+++ b/form005.html
@@ -13,6 +13,10 @@
    <fieldset>
     <legend>Idiomas que a pessoa fala</legend>
     <input type="checkbox" name="ing" id="iing"> Ingles
+    <input type="checkbox" name="esp" id="iesp"> Espanhol
+    <input type="checkbox" name="ita" id="iita"> Italiano
+    <input type="checkbox" name="ale" id="iale"> Alemao
+    <input type="checkbox" name="hol" id="ihol"> Holandes
    </fieldset>
     <p>
         <input type="submit" value="Enviar">
