--- a/form005.html
+++ b/form005.html
@@ -12,8 +12,8 @@
   <form action="cadastro.php" method="get" autocomplete="on">
    <fieldset>
     <legend>Idiomas que a pessoa fala</legend>
-    <input type="checkbox" name="ing" id="iing"><label for="iing"> Ingles</label> <br>
-    <input type="checkbox" name="esp" id="iesp"><label for="iesp">Espanhol</label><br>
+    <input type="checkbox" name="ing" id="iing" checked><label for="iing"> Ingles</label> <br>
+    <input type="checkbox" name="esp" id="iesp" checked><label for="iesp">Espanhol</label><br>
     <input type="checkbox" name="ita" id="iita"><label for="iita">Italiano</label><br>
     <input type="checkbox" name="ale" id="iale"><label for="iale">Alemao</label><br>
     <input type="checkbox" name="hol" id="ihol"><label for="ihol">Holandes</label>
