--- a/form005.html
+++ b/form005.html
@@ -10,6 +10,15 @@
   <h1>Exemplo de Formulario</h1>  
 
   <form action="cadastro.php" method="get" autocomplete="on">
+    <fieldset>
+        <p>
+            <legend>Linguas mais faladas</legend>
+            <input type="radio" name="lingua" id="iing"><label for="iing">Ingles</label>
+        </p>
+        <p>
+            <input type="radio" name="lingua" id="iesp"><label for="iesp">Espanhol</label>
+        </p>
+    </fieldset>
    <fieldset>
     <legend>Idiomas que a pessoa fala</legend>
     <input type="checkbox" name="ing" id="iing" checked><label for="iing"> Ingles</label> <br>
