--- a/form006.html
+++ b/form006.html
@@ -16,6 +16,11 @@
         </p>
 
         <p>
+            <label for="ininvel">Nivel de Satisfacao :</label>
+            <input type="range" name="nivel" id="ininvel">
+        </p>
+
+        <p>
             <input type="submit" value="Enviar">
             <input type="reset" value="Limpar">
         </p>
