--- a/form006.html
+++ b/form006.html
@@ -12,7 +12,7 @@
     <form action="cadastro.php" method="get" autocomplete="on">
         <p>
             <label for="icor">Cor :</label>
-            <input type="color" name="cor" id="icor">
+            <input type="color" name="cor" id="icor" value="#55555">
         </p>
 
         <p>
