--- a/form006.html
+++ b/form006.html
@@ -17,7 +17,7 @@
 
         <p>
             <label for="ininvel">Nivel de Satisfacao :</label>
-            <input type="range" name="nivel" id="ininvel">
+            <input type="range" name="nivel" id="ininvel" min="4" max="150">
         </p>
 
         <p>
