--- a/form006.html
+++ b/form006.html
@@ -21,6 +21,11 @@
         </p>
 
         <p>
+            <label for="ifoto">Foto do Perfil</label>
+            <input type="file" name="foto" id="ifoto">
+        </p>
+
+        <p>
             <input type="submit" value="Enviar">
             <input type="reset" value="Limpar">
         </p>
