--- a/form006.html
+++ b/form006.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Exemplo de Formulario</h1>
 
-    <form action="cadastro.php" method="get" autocomplete="on">
+    <form action="cadastro.php" method="post" autocomplete="on">
         <p>
             <label for="icor">Cor :</label>
             <input type="color" name="cor" id="icor" value="#5555">
