--- a/form007.html
+++ b/form007.html
@@ -11,6 +11,18 @@
 
    <form action="cadastro.php" method="get" autocomplete="on">
 
+    <p>
+        <label for="iest">Estado :</label>
+        <select name="estado" id="iest">
+            <option value="SP">Sao Paulo</option>
+            <option value="RJ">Rio de Janeiro</option>
+            <option value="CE">Ceara</option>
+            <option value="MG">Minas Gerais</option>
+            <option value="PE">Pernambuco</option>
+            <option value="RG">Rio Grande do Sul</option>
+        </select>
+    </p>
+
    <p>
     <input type="submit" value="Enviar">
     <input type="reset" value="Limpar">
