--- a/form007.html
+++ b/form007.html
@@ -14,12 +14,24 @@
     <p>
         <label for="iest">Estado :</label>
         <select name="estado" id="iest">
+            <optgroup label="Estados do Brasil">
             <option value="SP">Sao Paulo</option>
             <option value="RJ">Rio de Janeiro</option>
             <option value="CE">Ceara</option>
             <option value="MG">Minas Gerais</option>
             <option value="PE">Pernambuco</option>
             <option value="RG">Rio Grande do Sul</option>
+            </optgroup>
+
+             <optgroup label="Cidades dos Estados Unidos da America">
+            <option value="los">Los Angeles</option>
+            <option value="chi">Chicago</option>
+            <option value="min">Minesolta</option>
+            <option value="atl">Atlanta</option>
+            <option value="mia">Miami</option>
+            <option value="kan">Kansas</option>
+            <option value="fort">Fort Wayne</option>
+             </optgroup>
         </select>
     </p>
 
