--- a/form007.html
+++ b/form007.html
@@ -14,6 +14,7 @@
     <p>
         <label for="iest">Estado :</label>
         <select name="estado" id="iest">
+            <option value="" selected -----Escolha------></option>
             <optgroup label="Estados do Brasil">
             <option value="SP">Sao Paulo</option>
             <option value="RJ">Rio de Janeiro</option>
