--- a/form007.html
+++ b/form007.html
@@ -36,6 +36,17 @@
         </select>
     </p>
 
+    <p>
+        <label for="iprof">Profissao</label>
+        <input type="text" name="prof" id="iprof" list="lstprof">
+        <datalist id="lstprof">
+        <option value = "ADM">Administrador</option>
+        <option value = "COM">Contador</option>
+        <option value = "DES">Desenvolvedor</option>
+        <option value = "PROF">Professor</option>
+        </datalist>
+    </p>
+
    <p>
     <input type="submit" value="Enviar">
     <input type="reset" value="Limpar">
