--- a/form007.html
+++ b/form007.html
@@ -46,6 +46,10 @@
         <option value = "PROF">Professor</option>
         </datalist>
     </p>
+    <p>
+        <label for="imsg">Mensagem :</label><br>
+        <textarea name="msg" id="imsg" cols="40" rows="20"></textarea>
+    </p>
 
    <p>
     <input type="submit" value="Enviar">
