--- a/form007.html
+++ b/form007.html
@@ -48,7 +48,7 @@
     </p>
     <p>
         <label for="imsg">Mensagem :</label><br>
-        <textarea name="msg" id="imsg" cols="40" rows="20"></textarea>
+        <textarea name="msg" id="imsg" cols="40" rows="20" placeholder="Sua mensagem aqui..."></textarea>
     </p>
 
    <p>
