--- a/form008.html
+++ b/form008.html
@@ -10,7 +10,16 @@
    <h1>Exemplo de Formulario</h1>
    
    <form action="cadastro.php" method="get" autocomplete="on">
+    <p>
+        <label for="in1">Numero 1:</label>
+        <input type="number" name="n1" id="in1" min="0" max="200" required>
+    </p>
 
+     <p>
+        <label for="in2">Numero 2:</label>
+        <input type="number" name="n2" id="in2" min="0" max="200" required> 
+     </p>
+     
     <p>
         <input type="submit" value="Enviar">
     
