--- a/form008.html
+++ b/form008.html
@@ -17,7 +17,7 @@
 
      <p>
         <label for="in2">Numero 2:</label>
-        <input type="number" name="n2" id="in2" min="0" max="200" required oninput="isoma.innerHTML = Number(in1.value) + Number(in2.value)> 
+        <input type="number" name="n2" id="in2" min="0" max="200" required > 
      </p>
 
      <p>
