--- a/form009.html
+++ b/form009.html
@@ -12,6 +12,11 @@
     <form action="cadastro.php" method="get" autocomplete="on">
 
         <p>
+            <label for="inum">Numero :</label>
+            <input type="range" name="num" id="inum">
+        </p>
+
+        <p>
             <input type="submit" value="Enviar">
             <input type="reset" value="Limpar">
         </p>
