--- a/form009.html
+++ b/form009.html
@@ -13,7 +13,7 @@
 
         <p>
             <label for="inum">Numero :</label>
-            <input type="range" name="num" id="inum">
+            <input type="range" name="num" id="inum" min="0" max="300">
         </p>
 
         <p>
