--- a/form009.html
+++ b/form009.html
@@ -13,7 +13,8 @@
 
         <p>
             <label for="inum">Numero :</label>
-            <input type="range" name="num" id="inum" min="0" max="300">
+            <input type="range" name="num" id="inum" min="0" max="300" value="6">
+            <output id="ival">6</output>
         </p>
 
         <p>
