--- a/form010.html
+++ b/form010.html
@@ -10,7 +10,11 @@
    <h1>Exemplo de Formulario</h1> 
 
    <form action="cadastro.php" method="get" autocomplete="on">
+     <p>
 
+        <label for="iano">Em que ano voce nasceu ?</label>
+        <input type="number" name="ano" id="iano">
+     </p>
 
     <p>
         <input type="submit" value="Enviar">
