--- a/form010.html
+++ b/form010.html
@@ -13,7 +13,7 @@
      <p>
 
         <label for="iano">Em que ano voce nasceu ?</label>
-        <input type="number" name="ano" id="iano" min="1900" max="3000">
+        <input type="number" name="ano" id="iano" min="1900" max="3000" value="2000">
      </p>
 
     <p>
