--- a/form010.html
+++ b/form010.html
@@ -16,6 +16,11 @@
         <input type="number" name="ano" id="iano" min="1900" max="3000" value="2000">
      </p>
 
+     <p>
+        <label for="iidade">Sua idade é :</label>
+        <output id="iidade"></output>
+     </p>
+
     <p>
         <input type="submit" value="Enviar">
         <input type="reset" value="Limpar">
