--- a/form010.html
+++ b/form010.html
@@ -18,7 +18,7 @@
 
      <p>
         <label for="iidade">Sua idade é :</label>
-        <output id="iidade"></output>
+        <output id="iidade">0</output>
      </p>
 
     <p>
