--- a/form010.html
+++ b/form010.html
@@ -13,7 +13,7 @@
      <p>
 
         <label for="iano">Em que ano voce nasceu ?</label>
-        <input type="number" name="ano" id="iano" min="1900" max="3000">
+        <input type="number" name="ano" id="iano" min="1900" max="3000" oninput="calcidade()">
      </p>
 
      <p>
@@ -26,5 +26,11 @@
         <input type="reset" value="Limpar">
     </p>
    </form>
+   <script>
+    
+    
+
+
+   </script>
 </body>
 </html>
