--- a/form010.html
+++ b/form010.html
@@ -28,7 +28,10 @@
    </form>
    <script>
     
-    
+    function calcidade(){
+        let atual = new Date().getFullYear()
+        iidade.innerHTML = Number(atual) - Number(iano.value)
+    }
 
 
    </script>
